--- a/alias/uschedule.conf
+++ b/alias/uschedule.conf
@@ -1,6 +1,6 @@
-Alias /uschedule "C:/Users/Matt/Documents/wamp/apps/uschedule/" 
+Alias /uschedule "C:/wamp/apps/uschedule/" 
 
-<Directory "C:/Users/Matt/Documents/wamp/apps/uschedule/">
+<Directory "C:/wamp/apps/uschedule/">
     Options Indexes FollowSymLinks ExecCGI
     AllowOverride all
         Order Deny,Allow
